landing page content update

--- a/html/index.html
+++ b/html/index.html
@@ -288,9 +288,9 @@
 
 
     <div class="Grid Grid--gutters Grid--cols-3">
-      <a href="/resume"> <button class="buttonLanding arrButtonResume">Resume &nbsp;
+      <a href="/resume"> <button class="buttonLanding arrUpRight">Resume &nbsp;
         </button></a>
-      <a href="#about"> <button class="buttonLanding arrButton">About me &nbsp;
+      <a href="#about"> <button class="buttonLanding arrDown">About me &nbsp;
         </button></a>
     </div>
   </div>
@@ -605,12 +605,14 @@
             </h3>
           </div>
 
-          <div class="row">
-            <a href="mailto:vickyw.design@gmail.com"> <button class="buttonLanding">Email me
+          <div class="row centerVer">
+
+              <a href="mailto:vickyw.design@gmail.com"> <button class="buttonLanding">Email me &nbsp;
               </button></a>
+
             <div class="ClipboardBoxIconOnly">
               <button class="ClipboardIconOnly">
-                <img class="iconM hoverGrey100 paddingM fitContentax borderRadiusMax" title="Copy Email Address to Clipboard" src="/icon/copy.svg">
+                <img class="iconM hoverGrey300 paddingM fitContentax borderRadiusMax" title="Copy Email Address to Clipboard" src="/icon/copy.svg">
                 <p class="clickIconCopy">vickyw.design@gmail.com
                 </p>
               </button>
@@ -670,7 +672,7 @@
 
                   <li class="progress__item progress__item--active" data-aos="fade-up">
                     <h3> <strong>Web Implementation & <a href="/design_system" class="textUnderline" title="Academic Projects">Design System Management</a> </strong> </h3>
-                    <h3>Since 2020, I have been designing, implementing, and maintaining my website. During this process, I have learned a lot, including managing a design system with HTML, CSS, JS, and EJS. I continuously improve my <a class="textUnderline" href="javascript-learning">JavaScript</a> knowledge, monitor site traffic with tools like Posthog and Google Analytics, and have even gained some SEO knowledge.
+                    <h3>Since 2020, I have been designing, implementing, and maintaining my website. During this process, I have learned a lot, including managing a design system with HTML, CSS, JS, and EJS. I continuously improve my <a class="textUnderline" href="javascript-learning">JavaScript</a> knowledge, monitor site traffic with tools like Posthog and Google Analytics.
                     </h3>
                     <div class="blankHXS"></div>
 
@@ -719,7 +721,9 @@
             <div class="element">
 
               <h3 data-aos="fade-up"> <strong> Understanding Users and Products</strong> </h3>
-              <h4>In my view, a deep understanding of both business goals and user needs is fundamental to UX design. By prioritizing these aspects, I'm able to create immersive user experiences that truly resonate. This dual focus is crucial in ensuring that my design projects have a meaningful impact. It also aids in the planning and prioritization process, ensuring that we focus on what matters most.
+              <h4>A deep understanding of both business goals and user needs is crucial in UX design. I leverage both qualitative and quantitative data to make informed decisions.
+
+
               </h4>
             </div>
           </div>
@@ -728,7 +732,8 @@
           <div class="element">
             <div class="element">
               <h3 data-aos="fade-up"> <strong> Building Strong Cross-Functional Partnerships </strong> </h3>
-              <h4>I transform ambiguous projects into articulated plans, ensuring cross-functional alignment throughout the process. By setting early deadlines and establishing feedback loops for each milestone, I encourage timely feedback and iterative improvement. Collaborating closely with various teams, I enhance both the value and validity of research, leading to more informed and impactful design decisions.
+              <h4>I collaborate closely with cross-functional teams from research planning to product delivery. Continuous feedback loops help refine and enhance designs.
+
 
               </h4>
             </div>
@@ -738,7 +743,13 @@
           <div class="element">
             <div class="element">
               <h3 data-aos="fade-up"> <strong> Managing the Design Process </strong> </h3>
-              <h4>Throughout each phase of the design process, from planning research to iterating designs and delivering high-quality final products, my focus is on maintaining a feedback loop to continuously refine and improve the design. I ensure that each phase has a clear deadline to keep the project on track. By documenting each iteration and evaluating the strengths and weaknesses of each iteration, I aim to build a more effective and impactful design.
+              <h4>Clear deadlines for each phase keep projects on track. Documenting and evaluating each iteration ensures the creation of impactful and effective designs.
+
+
+
+
+
+
 
 
               </h4>
