--- a/html/architecture/index.html
+++ b/html/architecture/index.html
@@ -676,20 +676,20 @@
             <div class="Grid Grid--gutters">
               <div class="ClipboardBoxIconOnly">
                 <button class="ClipboardIconOnly">
-                  <img title="Copy Email Address to Clipboard" class="iconM hoverGrey300 paddingS fitContent borderRadiusMax" title="Copy to Clipboard" src="/icon/mail.svg" alt="LinkedIn">
+                  <img title="Copy Email Address to Clipboard" class="iconM hoverWhite paddingS fitContent borderRadiusMax" title="Copy to Clipboard" src="/icon/mail.svg" alt="LinkedIn">
                   <p class="clickIconCopy">vickyw.design@gmail.com</p>
                 </button>
               </div>
               <a target="_blank" href="https://www.linkedin.com/in/vicky-wyq/" title="LinkedIn">
-                <img class="iconM hoverGrey300 paddingS fitContent borderRadiusMax" src="/icon/in.svg" alt="LinkedIn">
+                <img class="iconM hoverWhite paddingS fitContent borderRadiusMax" src="/icon/in.svg" alt="LinkedIn">
               </a>
 
               <a target="_blank" href="https://github.com/vicky-wyq">
-                <img class="iconM hoverGrey300 paddingS fitContent borderRadiusMax" src="/icon/git.svg" alt="GitHub" title="GitHub">
+                <img class="iconM hoverWhite paddingS fitContent borderRadiusMax" src="/icon/git.svg" alt="GitHub" title="GitHub">
               </a>
 
               <a target="_blank" href="https://codepen.io/vicky-wyq" title="CodePen">
-                <img class="iconM hoverGrey300 paddingS fitContent borderRadiusMax" src="/icon/Codepen.svg" alt="CodePen">
+                <img class="iconM hoverWhite paddingS fitContent borderRadiusMax" src="/icon/Codepen.svg" alt="CodePen">
               </a>
 
             </div>
