--- a/html/design_system/index.html
+++ b/html/design_system/index.html
@@ -7754,7 +7754,7 @@ strong {
     <div class="blankHXS"></div>
     
 
-          <div class="Grid-cell shadowBoxLt float cardBorder borderRadiusS cardBottomBorder  paddingNone marginXS">
+          <div class="Grid-cell shadowBoxLt float cardBorder colorBgVW borderRadiusS cardBottomBorder  paddingNone marginXS">
   <a class="no-hover-effect" href="/design_system/navigation/">
     <img src="/projectImages/vicky_website_short.svg" alt="Navigation Exploration">
     <div class="element">
@@ -7973,20 +7973,20 @@ strong {
             <div class="Grid Grid--gutters">
               <div class="ClipboardBoxIconOnly">
                 <button class="ClipboardIconOnly">
-                  <img title="Copy Email Address to Clipboard" class="iconM hoverGrey300 paddingS fitContent borderRadiusMax" title="Copy to Clipboard" src="/icon/mail.svg" alt="LinkedIn">
+                  <img title="Copy Email Address to Clipboard" class="iconM hoverWhite paddingS fitContent borderRadiusMax" title="Copy to Clipboard" src="/icon/mail.svg" alt="LinkedIn">
                   <p class="clickIconCopy">vickyw.design@gmail.com</p>
                 </button>
               </div>
               <a target="_blank" href="https://www.linkedin.com/in/vicky-wyq/" title="LinkedIn">
-                <img class="iconM hoverGrey300 paddingS fitContent borderRadiusMax" src="/icon/in.svg" alt="LinkedIn">
+                <img class="iconM hoverWhite paddingS fitContent borderRadiusMax" src="/icon/in.svg" alt="LinkedIn">
               </a>
 
               <a target="_blank" href="https://github.com/vicky-wyq">
-                <img class="iconM hoverGrey300 paddingS fitContent borderRadiusMax" src="/icon/git.svg" alt="GitHub" title="GitHub">
+                <img class="iconM hoverWhite paddingS fitContent borderRadiusMax" src="/icon/git.svg" alt="GitHub" title="GitHub">
               </a>
 
               <a target="_blank" href="https://codepen.io/vicky-wyq" title="CodePen">
-                <img class="iconM hoverGrey300 paddingS fitContent borderRadiusMax" src="/icon/Codepen.svg" alt="CodePen">
+                <img class="iconM hoverWhite paddingS fitContent borderRadiusMax" src="/icon/Codepen.svg" alt="CodePen">
               </a>
 
             </div>
