--- a/html/index.html
+++ b/html/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="colorBgVW pattern1">
 <!--Head-->
 <head>
   <meta charset="UTF-8">
@@ -225,7 +225,7 @@
             <div class="element">
               <div class="widthFitContent">
                 <div class="dropdownSM">
-                  <img title="Share" class="iconS hoverGrey300 paddingM fitContent borderRadiusMax dropbtn" src="/icon/share.svg" alt="Share">
+                  <img title="Share" class="iconS hoverWhite paddingM fitContent borderRadiusMax dropbtn" src="/icon/share.svg" alt="Share">
                   <div class="dropdownSM-content">
                     <a href="https://www.linkedin.com/sharing/share-offsite/?url=https://vickywang.me" target="_blank">Share
                       on LinkedIn</a>
@@ -243,7 +243,7 @@
       <div class="Grid-cell">
         <div class="ClipboardBoxIconOnly">
           <button class="ClipboardIconOnly">
-            <img title="Copy Email to Clipboard" class="iconM hoverGrey300 paddingM fitContentax borderRadiusMax" src="./icon/mail.svg" alt="LinkedIn">
+            <img title="Copy Email to Clipboard" class="iconM hoverWhite paddingM fitContentax borderRadiusMax" src="./icon/mail.svg" alt="LinkedIn">
             <p class="clickIconCopy">vickyw.design@gmail.com</p>
           </button>
         </div>
@@ -251,18 +251,18 @@
       </div>
       <div class="Grid-cell">
         <a href="https://www.linkedin.com/in/vicky-wyq/" target="_blank" title="LinkedIn">
-          <img class="iconM hoverGrey300 paddingM fitContentax borderRadiusMax borderRadiusS" src="./icon/in.svg" alt="LinkedIn">
+          <img class="iconM hoverWhite paddingM fitContentax borderRadiusMax borderRadiusS" src="./icon/in.svg" alt="LinkedIn">
         </a>
       </div>
 
       <div class="Grid-cell">
         <a href="https://github.com/vicky-wyq" target="_blank" title="GitHub">
-          <img class="iconM hoverGrey300 paddingM fitContentax borderRadiusMax" src="./icon/git.svg" alt="GitHub">
+          <img class="iconM hoverWhite paddingM fitContentax borderRadiusMax" src="./icon/git.svg" alt="GitHub">
         </a>
       </div>
       <div class="Grid-cell">
         <a href="https://codepen.io/vicky-wyq" target="_blank" title="CodePen">
-          <img class="iconM hoverGrey300 paddingM fitContentax borderRadiusMax" src="./icon/Codepen.svg" alt="CodePen">
+          <img class="iconM hoverWhite paddingM fitContentax borderRadiusMax" src="./icon/Codepen.svg" alt="CodePen">
         </a>
       </div>
       <div class="Grid-cell">
@@ -322,7 +322,7 @@
     <div class="wrapper">
       <div class="Grid Grid--gutters Grid--cols-2">
 
-        <div class="Grid-cell shadowBoxLt float cardBorder borderRadiusS cardBottomBorder BYP paddingNone marginXS">
+        <div class="Grid-cell shadowBoxLt float cardBorder colorBgVW borderRadiusS cardBottomBorder BYP paddingNone marginXS">
   <a class="no-hover-effect" href="/byp_b2c_booking">
     <img src="/projectImages/Cover_b2c_booking.png" alt="Optimizing Consumer-Facing Pet Service Bookings and Enhancing the Appointment Experience ">
     <div class="element">
@@ -345,7 +345,7 @@
       </div>
       <div class="Grid Grid--gutters Grid--cols-2">
 
-        <div class="Grid-cell shadowBoxLt float cardBorder borderRadiusS cardBottomBorder BYP paddingNone marginXS">
+        <div class="Grid-cell shadowBoxLt float cardBorder colorBgVW borderRadiusS cardBottomBorder BYP paddingNone marginXS">
   <a class="no-hover-effect" href="/byp_b2b_subscription">
     <img src="/projectImages/Cover_BYP_AppB2B.png" alt="Mastering B2B SaaS Subscription Success">
     <div class="element">
@@ -356,7 +356,7 @@
   </a>
 </div>
 
-        <div class="Grid-cell shadowBoxLt float cardBorder borderRadiusS cardBottomBorder BYP paddingNone marginXS">
+        <div class="Grid-cell shadowBoxLt float cardBorder colorBgVW borderRadiusS cardBottomBorder BYP paddingNone marginXS">
   <a class="no-hover-effect" href="/byp_b2b_SaaS">
     <img src="/projectImages/Cover_BYP_AppB2B_Redesign.png" alt="B2B SaaS Booking App Revamp: The Transition from White-Glove to Self-Service">
     <div class="element">
@@ -371,7 +371,7 @@
 
 
       <div class="Grid Grid--gutters Grid--cols-2">
-        <div class="Grid-cell shadowBoxLt float cardBorder borderRadiusS cardBottomBorder LASO paddingNone marginXS">
+        <div class="Grid-cell shadowBoxLt float cardBorder colorBgVW borderRadiusS cardBottomBorder LASO paddingNone marginXS">
   <a class="no-hover-effect" href="/refining_rx_zero/">
     <img src="/projectImages/Cover_LASO_RXZero.png" alt="Shifting Focus: Transforming Local and Telehealth Services into RX Zero">
     <div class="element">
@@ -424,7 +424,7 @@
 </div>
         -->
 
-        <div class="Grid-cell shadowBoxLt float cardBorder borderRadiusS cardBottomBorder LASO paddingNone marginXS">
+        <div class="Grid-cell shadowBoxLt float cardBorder colorBgVW borderRadiusS cardBottomBorder LASO paddingNone marginXS">
   <a class="no-hover-effect" href="/savings_calculator/">
     <img src="/projectImages/Cover_LASO_CostCalculator.png" alt="RX Zero Savings Calculator: Uncover Prescription Meds Savings">
     <div class="element">
@@ -436,7 +436,7 @@
 </div>
 
 
-        <div class="Grid-cell shadowBoxLt float cardBorder borderRadiusS cardBottomBorder LASO paddingNone marginXS">
+        <div class="Grid-cell shadowBoxLt float cardBorder colorBgVW borderRadiusS cardBottomBorder LASO paddingNone marginXS">
   <a class="no-hover-effect" href="/admin_panel/">
     <img src="/projectImages/Cover_LASO_AdminPanel.png" alt="LASO Admin Panel: From Concept to Reality - Simplified User Management">
     <div class="element">
@@ -478,7 +478,7 @@
 
     <div class="wrapper">
       <div class="Grid Grid--gutters Grid--cols-2">
-        <div class="Grid-cell shadowBoxLt float cardBorder borderRadiusS cardBottomBorder GLORIFY paddingNone marginXS">
+        <div class="Grid-cell shadowBoxLt float cardBorder colorBgVW borderRadiusS cardBottomBorder GLORIFY paddingNone marginXS">
   <a class="no-hover-effect" href="/glorify/">
     <img src="/projectImages/Cover_Glorify.png" alt="Glorify: Transforming Solitary Devotion into Community Engagement">
     <div class="element">
@@ -492,7 +492,7 @@
       </div>
       <div class="Grid Grid--gutters Grid--cols-2">
 
-        <div class="Grid-cell shadowBoxLt float cardBorder borderRadiusS cardBottomBorder SEER paddingNone marginXS">
+        <div class="Grid-cell shadowBoxLt float cardBorder colorBgVW borderRadiusS cardBottomBorder SEER paddingNone marginXS">
   <a class="no-hover-effect" href="/seer/">
     <img src="/projectImages/Cover_SEER.png" alt="SEER: Enhancing Brand Impact on Reddit">
     <div class="element">
@@ -505,7 +505,7 @@
     </div>
   </a>
 </div>
-        <div class="Grid-cell shadowBoxLt float cardBorder borderRadiusS cardBottomBorder APPOINTA paddingNone marginXS">
+        <div class="Grid-cell shadowBoxLt float cardBorder colorBgVW borderRadiusS cardBottomBorder APPOINTA paddingNone marginXS">
   <a class="no-hover-effect" href="/appointa/">
     <img src="/projectImages/Cover_APPOINTA.png" alt="APPOINTA: Interview Scheduling Made Simple">
     <div class="element">
@@ -545,7 +545,7 @@
 
     <div class="wrapper">
       <div class="Grid Grid--gutters Grid--cols-3">
-        <div class="Grid-cell shadowBoxLt float cardBorder borderRadiusS cardBottomBorder  paddingNone marginXS">
+        <div class="Grid-cell shadowBoxLt float cardBorder colorBgVW borderRadiusS cardBottomBorder  paddingNone marginXS">
   <a class="no-hover-effect" href="/design_system/">
     <img src="/projectImages/vicky_website.svg" alt="Scalable Design System Design and Implementation">
     <div class="element">
@@ -612,7 +612,7 @@
 
             <div class="ClipboardBoxIconOnly">
               <button class="ClipboardIconOnly">
-                <img class="iconM hoverGrey300 paddingM fitContentax borderRadiusMax" title="Copy Email Address to Clipboard" src="/icon/copy.svg">
+                <img class="iconM hoverWhite paddingM fitContentax borderRadiusMax" title="Copy Email Address to Clipboard" src="/icon/copy.svg">
                 <p class="clickIconCopy">vickyw.design@gmail.com
                 </p>
               </button>
@@ -663,7 +663,7 @@
                   <div class="blankHXS"></div>
 
                   <li class="progress__item progress__item--active" data-aos="fade-up">
-                    <h3> <strong class=""><a href="/architecture" class="textUnderline" title="Academic Projects"> Architectural Design</a> & <a href="/photography" class="textUnderline" title="Nature & Wildlife"> Photography </a></strong></h3>
+                    <h3> <strong class=""><a href="/architecture" class="textUnderline" title="Architecture Works"> Architectural Design</a> & <a href="/photography" class="textUnderline" title="Nature & Wildlife"> Photography </a></strong></h3>
                     <h3>In design, my heart lies in a vibrant creative vision that marries creativity, innovation, and precision with out-of-the-box thinking.
                       In architecture, I focus on creating functional and visually appealing buildings that meet client' needs, balance different elements, and achieve a harmonious aesthetic.
                     </h3>
@@ -671,7 +671,8 @@
                   <div class="blankHXS"></div>
 
                   <li class="progress__item progress__item--active" data-aos="fade-up">
-                    <h3> <strong>Web Implementation & <a href="/design_system" class="textUnderline" title="Academic Projects">Design System Management</a> </strong> </h3>
+                    <h3> <strong>Web Implementation & 
+                      <a href="/design_system" class="textUnderline" title="Design System"> Design System Design/Update</a> </strong> </h3>
                     <h3>Since 2020, I have been designing, implementing, and maintaining my website. During this process, I have learned a lot, including managing a design system with HTML, CSS, JS, and EJS. I continuously improve my <a class="textUnderline" href="javascript-learning">JavaScript</a> knowledge, monitor site traffic with tools like Posthog and Google Analytics.
                     </h3>
                     <div class="blankHXS"></div>
@@ -881,20 +882,20 @@
             <div class="Grid Grid--gutters">
               <div class="ClipboardBoxIconOnly">
                 <button class="ClipboardIconOnly">
-                  <img title="Copy Email Address to Clipboard" class="iconM hoverGrey300 paddingS fitContent borderRadiusMax" title="Copy to Clipboard" src="/icon/mail.svg" alt="LinkedIn">
+                  <img title="Copy Email Address to Clipboard" class="iconM hoverWhite paddingS fitContent borderRadiusMax" title="Copy to Clipboard" src="/icon/mail.svg" alt="LinkedIn">
                   <p class="clickIconCopy">vickyw.design@gmail.com</p>
                 </button>
               </div>
               <a target="_blank" href="https://www.linkedin.com/in/vicky-wyq/" title="LinkedIn">
-                <img class="iconM hoverGrey300 paddingS fitContent borderRadiusMax" src="/icon/in.svg" alt="LinkedIn">
+                <img class="iconM hoverWhite paddingS fitContent borderRadiusMax" src="/icon/in.svg" alt="LinkedIn">
               </a>
 
               <a target="_blank" href="https://github.com/vicky-wyq">
-                <img class="iconM hoverGrey300 paddingS fitContent borderRadiusMax" src="/icon/git.svg" alt="GitHub" title="GitHub">
+                <img class="iconM hoverWhite paddingS fitContent borderRadiusMax" src="/icon/git.svg" alt="GitHub" title="GitHub">
               </a>
 
               <a target="_blank" href="https://codepen.io/vicky-wyq" title="CodePen">
-                <img class="iconM hoverGrey300 paddingS fitContent borderRadiusMax" src="/icon/Codepen.svg" alt="CodePen">
+                <img class="iconM hoverWhite paddingS fitContent borderRadiusMax" src="/icon/Codepen.svg" alt="CodePen">
               </a>
 
             </div>
