landing btn update

--- a/html/index.html
+++ b/html/index.html
@@ -197,6 +197,7 @@
   </header>
 
   <div class="blankHM"></div>
+  <div class="blankHS"></div>
 
   <div class="wrapper">
     <div class="Grid Grid--full Grid--gutters">
@@ -609,9 +610,13 @@
           </div>
 
           <div class="row centerVer">
-
-            <a href="mailto:vickyw.design@gmail.com"> <button class="buttonLanding">Email me &nbsp;
+            <div class="element">
+              <a href="mailto:vickyw.design@gmail.com"> <button class="buttonFlipLarge">Email me
               </button></a>
+            </div>
+
+
+            <div class="element">
 
             <div class="ClipboardBoxIconOnly">
               <button class="ClipboardIconOnly">
@@ -621,7 +626,7 @@
               </button>
             </div>
           </div>
-        </div>
+        </div></div>
 
       </div>
 
