--- a/html/index.html
+++ b/html/index.html
@@ -197,13 +197,13 @@
   </header>
 
   <div class="blankHM"></div>
-  <div class="blankHS"></div>
+  <div class="blankHXS"></div>
 
   <div class="wrapper">
     <div class="Grid Grid--full Grid--gutters">
       <div class="Grid-cell">
         <div class="element">
-          <p class="t-hello">👋🏻 hello, I'm Vicky, a UX Designer</p>
+          <p class="t-hello">👋🏻 hello, my name is Vicky, </p>
 
         </div>
       </div>
@@ -213,15 +213,17 @@
   <div class="wrapper">
     <div class="Grid Grid--gutters">
       <div class="Grid-cell">
-        <div class="row heighMobileTitle">
+        <div class="row">
           <div class="widthMax">
             <div class="element">
-                    <h1 class="specialTextTitle"> Passionate about creating <span class="txt-type" data-wait="3000" data-words='["simple", "smooth", "engaging"]'></span> experiences.
+              <h1 class="specialTextTitle"> I'm a <span class="txt-type widthXXS" data-wait="3000" data-words='["UX Designer", "Product Designer", "Brand Designer"]'></span>
+              </h1>
+              <h1 class="specialTextTitle"> Passionate about creating simple, smooth, engaging experiences.
 
-                    </h1>
+              </h1>
             </div>
           </div>
-          <div class="paddingL fitContenteft">
+          <div class="paddingL fitContenteft displayLaptop">
             <div class="element">
               <div class="widthFitContent">
                 <div class="dropdownSM">
@@ -238,6 +240,7 @@
         </div>
       </div>
     </div>
+    <div class="blankHXS"></div>
 
     <div class="Grid Grid--gutters Grid--cols-8 ">
       <div class="Grid-cell">
@@ -612,21 +615,22 @@
           <div class="row centerVer">
             <div class="element">
               <a href="mailto:vickyw.design@gmail.com"> <button class="buttonFlipLarge">Email me
-              </button></a>
+                </button></a>
             </div>
 
 
             <div class="element">
 
-            <div class="ClipboardBoxIconOnly">
-              <button class="ClipboardIconOnly">
-                <img class="iconM hoverWhite paddingM fitContentax borderRadiusMax" title="Copy Email Address to Clipboard" src="/icon/copy.svg">
-                <p class="clickIconCopy">vickyw.design@gmail.com
-                </p>
-              </button>
+              <div class="ClipboardBoxIconOnly">
+                <button class="ClipboardIconOnly">
+                  <img class="iconM hoverWhite paddingM fitContentax borderRadiusMax" title="Copy Email Address to Clipboard" src="/icon/copy.svg">
+                  <p class="clickIconCopy">vickyw.design@gmail.com
+                  </p>
+                </button>
+              </div>
             </div>
           </div>
-        </div></div>
+        </div>
 
       </div>
 
@@ -868,7 +872,7 @@
         <img src="/icon/arrow-top.svg" alt="back to top">
       </div>
       <div id="sis">
-        <h4>TOP</h4>
+        TOP
       </div>
     </div>
   </button>
