--- a/html/photography/index.html
+++ b/html/photography/index.html
@@ -1102,7 +1102,7 @@
         <img src="/icon/arrow-top.svg" alt="back to top">
       </div>
       <div id="sis">
-        <h4>TOP</h4>
+        TOP
       </div>
     </div>
   </button>
