--- a/html/architecture/manifold_ground/index.html
+++ b/html/architecture/manifold_ground/index.html
@@ -547,7 +547,7 @@
         <img src="/icon/arrow-top.svg" alt="back to top">
       </div>
       <div id="sis">
-        <h4>TOP</h4>
+        TOP
       </div>
     </div>
   </button>
