--- a/html/design_system/index.html
+++ b/html/design_system/index.html
@@ -7954,7 +7954,7 @@ strong {
         <img src="/icon/arrow-top.svg" alt="back to top">
       </div>
       <div id="sis">
-        <h4>TOP</h4>
+        TOP
       </div>
     </div>
   </button>
