navigation color consistency

--- a/html/appointa/index.html
+++ b/html/appointa/index.html
@@ -175,6 +175,8 @@
 
 
 
+
+
 <!-- header -->
 
 
@@ -186,8 +188,8 @@
 
 
   <header>
-    <nav class="header" id="header">
-      <div class="backgroundColorNav">
+    <nav class="header " id="header">
+      <div class="headerContainer">
         <a href="/" class="marginS centerVer pointer Grid--center"> 
           <div class="arrow-container moveBackArrow">
             <div class="left-arrow APPOINTA"></div>
