--- a/html/architecture/narrow_stripes/index.html
+++ b/html/architecture/narrow_stripes/index.html
@@ -177,6 +177,8 @@
 
 
 
+
+
 <!-- header -->
 
 
@@ -188,8 +190,8 @@
 
 
   <header>
-    <nav class="header" id="header">
-      <div class="backgroundColorNav">
+    <nav class="header " id="header">
+      <div class="headerContainer">
         <a href="/architecture" class="marginS centerVer pointer Grid--center"> 
           <div class="arrow-container moveBackArrow">
             <div class="left-arrow "></div>
