--- a/html/index.html
+++ b/html/index.html
@@ -166,35 +166,36 @@
   </div>
 </div>
 <!-- progressBarScroll -->
-  <header>
-    <nav class="header" id="header">
-      <div class="backgroundColorNav">
-        <a href="/"><img class="logo pointer" src="/icon/LOGO.svg" alt="VW" title="vickywang.me"></a>
-        <div class="navbar">
-          <ol class="nav-menu">
-            <li class="nav-item active activeNav box">
-                <a href="#projects" class="nav-link">PROJECTS</a>
-              </li>
-            <li class="nav-item active activeNav box">
-              <a href="#experiments" class="nav-link ">EXPERIMENTS</a>
-            </li>
-            <li class="nav-item active activeNav box">
-                <a href="#design_system" class="nav-link ">DESIGN SYSTEM</a>
-              </li>
-            <li class="nav-item active activeNav box">
-              <a href="#about" class="nav-link ">ABOUT</a>
-            </li>
-          </ol>
-        </div>
-        <div class="hamburger">
-          <span class="bar"></span>
-          <span class="bar"></span>
-          <span class="bar"></span>
-        </div>
-      </div>
-    </nav>
+  
 
-  </header>
+<header>
+  <nav class="header bgVWGrey" id="header">
+    <div class="headerContainer">
+      <a href="/"><img class="logo pointer" src="/icon/LOGO.svg" alt="VW" title="vickywang.me"></a>
+      <div class="navbar">
+        <ol class="nav-menu colorBgVW">
+          <li class="nav-item active activeNav box">
+            <a href="#projects" class="nav-link">PROJECTS</a>
+          </li>
+          <li class="nav-item active activeNav box">
+            <a href="#experiments" class="nav-link ">EXPERIMENTS</a>
+          </li>
+          <li class="nav-item active activeNav box">
+            <a href="#design_system" class="nav-link ">DESIGN SYSTEM</a>
+          </li>
+          <li class="nav-item active activeNav box">
+            <a href="#about" class="nav-link ">ABOUT</a>
+          </li>
+        </ol>
+      </div>
+      <div class="hamburger">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+      </div>
+    </div>
+  </nav>
+</header>
 
   <div class="blankHM"></div>
   <div class="blankHXS"></div>
@@ -216,7 +217,7 @@
         <div class="row">
           <div class="widthMax">
             <div class="element">
-              <h1 class="specialTextTitle"> I'm a <span class="txt-type widthXXS" data-wait="3000" data-words='["UX Designer", "Product Designer", "Brand Designer"]'></span>
+              <h1 class="specialTextTitle"> I'm a <span class="txt-type widthXXS" data-wait="3000" data-words='["UX Designer", "Product Designer", "Web Designer"]'></span>
               </h1>
               <h1 class="specialTextTitle"> Passionate about creating simple, smooth, engaging experiences.
 
@@ -592,7 +593,7 @@
     <div class="blankHXS"></div>
 
     <div class="wrapper">
-      <div class="Grid Grid--gutters Grid--1of3 Grid--center">
+      <div class="Grid Grid--gutters Grid--1of3 Grid--top">
 
 
         <div class="Grid-cell">
