--- a/html/architecture/LACAMA/index.html
+++ b/html/architecture/LACAMA/index.html
@@ -174,6 +174,8 @@
 
 
 
+
+
 <!-- header -->
 
 
@@ -185,8 +187,8 @@
 
 
   <header>
-    <nav class="header" id="header">
-      <div class="backgroundColorNav">
+    <nav class="header " id="header">
+      <div class="headerContainer">
         <a href="/architecture" class="marginS centerVer pointer Grid--center"> 
           <div class="arrow-container moveBackArrow">
             <div class="left-arrow "></div>
