--- a/html/architecture/recreation_commons/index.html
+++ b/html/architecture/recreation_commons/index.html
@@ -179,6 +179,8 @@
 
 
 
+
+
 <!-- header -->
 
 
@@ -190,8 +192,8 @@
 
 
   <header>
-    <nav class="header" id="header">
-      <div class="backgroundColorNav">
+    <nav class="header " id="header">
+      <div class="headerContainer">
         <a href="/architecture" class="marginS centerVer pointer Grid--center"> 
           <div class="arrow-container moveBackArrow">
             <div class="left-arrow "></div>
