--- a/html/architecture/thesis_studio/index.html
+++ b/html/architecture/thesis_studio/index.html
@@ -176,6 +176,8 @@
 
 
 
+
+
 <!-- header -->
 
 
@@ -187,8 +189,8 @@
 
 
   <header>
-    <nav class="header" id="header">
-      <div class="backgroundColorNav">
+    <nav class="header " id="header">
+      <div class="headerContainer">
         <a href="/architecture" class="marginS centerVer pointer Grid--center"> 
           <div class="arrow-container moveBackArrow">
             <div class="left-arrow "></div>
