--- a/html/design_system/index.html
+++ b/html/design_system/index.html
@@ -178,6 +178,8 @@
 
 
 
+
+
 <!-- header -->
 
 
@@ -189,8 +191,8 @@
 
 
   <header>
-    <nav class="header" id="header">
-      <div class="backgroundColorNav">
+    <nav class="header " id="header">
+      <div class="headerContainer">
         <a href="/" class="marginS centerVer pointer Grid--center"> 
           <div class="arrow-container moveBackArrow">
             <div class="left-arrow "></div>
