footer and header update

--- a/html/index.html
+++ b/html/index.html
@@ -169,7 +169,7 @@
   
 
 <header>
-  <nav class="header bgVWGrey" id="header">
+  <nav class="header colorBgVW" id="header">
     <div class="headerContainer">
       <a href="/"><img class="logo pointer" src="/icon/LOGO.svg" alt="VW" title="vickywang.me"></a>
       <div class="navbar">
@@ -204,7 +204,7 @@
     <div class="Grid Grid--full Grid--gutters">
       <div class="Grid-cell">
         <div class="element">
-          <p class="t-hello">👋🏻 hello, my name is Vicky, </p>
+          <p class="t-hello">👋🏻 hello, I'm Vicky, a UX Designer</p>
 
         </div>
       </div>
@@ -217,9 +217,10 @@
         <div class="row">
           <div class="widthMax">
             <div class="element">
-              <h1 class="specialTextTitle"> I'm a <span class="txt-type widthXXS" data-wait="3000" data-words='["UX Designer", "Product Designer", "Web Designer"]'></span>
-              </h1>
-              <h1 class="specialTextTitle"> Passionate about creating simple, smooth, engaging experiences.
+
+
+
+              <h1 class="specialTextTitle">  Passionate about creating <span class="">simple, smooth, engaging</span> experiences.
 
               </h1>
             </div>
@@ -615,8 +616,9 @@
 
           <div class="row centerVer">
             <div class="element">
-              <a href="mailto:vickyw.design@gmail.com"> <button class="buttonFlipLarge">Email me
+              <a href="mailto:vickyw.design@gmail.com"> <button class="buttonFlipLarge bgVWGrey">Email me
                 </button></a>
+
             </div>
 
 
@@ -878,8 +880,10 @@
     </div>
   </button>
   <!--back to top-->
-    <!--footer-->
-  <footer class="footerBg">
+    
+  
+    
+  <footer class="borderTop colorBgVW ">
 
     <div class="blankHS"></div>
     <div class="wrapper">
@@ -892,7 +896,7 @@
             <div class="Grid Grid--gutters">
               <div class="ClipboardBoxIconOnly">
                 <button class="ClipboardIconOnly">
-                  <img title="Copy Email Address to Clipboard" class="iconM hoverWhite paddingS fitContent borderRadiusMax" title="Copy to Clipboard" src="/icon/mail.svg" alt="LinkedIn">
+                  <img title="Copy Email Address to Clipboard" class="iconM  hoverWhite paddingS fitContent borderRadiusMax" title="Copy to Clipboard" src="/icon/mail.svg" alt="LinkedIn">
                   <p class="clickIconCopy">vickyw.design@gmail.com</p>
                 </button>
               </div>
@@ -1013,7 +1017,8 @@
     </div>
 
   </footer>
-  <!--footer-->
+
+
   <!-- The Modal -->
   <div id="modal" class="modal">
     <span id="modal-close" class="modal-close">
