--- a/html/photography/index.html
+++ b/html/photography/index.html
@@ -1109,8 +1109,10 @@
     </div>
   </button>
   <!--back to top-->
-    <!--footer-->
-  <footer class="footerBg">
+    
+  
+    
+  <footer class="borderTop  ">
 
     <div class="blankHS"></div>
     <div class="wrapper">
@@ -1123,20 +1125,20 @@
             <div class="Grid Grid--gutters">
               <div class="ClipboardBoxIconOnly">
                 <button class="ClipboardIconOnly">
-                  <img title="Copy Email Address to Clipboard" class="iconM hoverWhite paddingS fitContent borderRadiusMax" title="Copy to Clipboard" src="/icon/mail.svg" alt="LinkedIn">
+                  <img title="Copy Email Address to Clipboard" class="iconM   paddingS fitContent borderRadiusMax" title="Copy to Clipboard" src="/icon/mail.svg" alt="LinkedIn">
                   <p class="clickIconCopy">vickyw.design@gmail.com</p>
                 </button>
               </div>
               <a target="_blank" href="https://www.linkedin.com/in/vicky-wyq/" title="LinkedIn">
-                <img class="iconM hoverWhite paddingS fitContent borderRadiusMax" src="/icon/in.svg" alt="LinkedIn">
+                <img class="iconM  paddingS fitContent borderRadiusMax" src="/icon/in.svg" alt="LinkedIn">
               </a>
 
               <a target="_blank" href="https://github.com/vicky-wyq">
-                <img class="iconM hoverWhite paddingS fitContent borderRadiusMax" src="/icon/git.svg" alt="GitHub" title="GitHub">
+                <img class="iconM  paddingS fitContent borderRadiusMax" src="/icon/git.svg" alt="GitHub" title="GitHub">
               </a>
 
               <a target="_blank" href="https://codepen.io/vicky-wyq" title="CodePen">
-                <img class="iconM hoverWhite paddingS fitContent borderRadiusMax" src="/icon/Codepen.svg" alt="CodePen">
+                <img class="iconM  paddingS fitContent borderRadiusMax" src="/icon/Codepen.svg" alt="CodePen">
               </a>
 
             </div>
@@ -1244,7 +1246,7 @@
     </div>
 
   </footer>
-  <!--footer-->
+
   <!-- Shared across the platform -->
 
 </body>
