--- a/html/architecture/thesis_studio/index.html
+++ b/html/architecture/thesis_studio/index.html
@@ -1003,10 +1003,30 @@
               <div class="Grid-cell">
                 <h5> <strong> Projects </strong> </h5>
                 <div class="blankHXXS"></div>
+                <a href="/byp_b2b_booking/">
+                  <h6 class="fontWeight400"> B2B Booking</h6>
+                </a>
+                <h6>For pet business owners booking appointments for their customers</h6>
+                <div class="blankHXXS"></div>
+                <a href="/byp_b2c_booking/">
+                  <h6 class="fontWeight400"> Consumer Booking</h6>
+                </a>
+                <h6>Enhancing the consumer booking experience</h6>
+                <div class="blankHXXS"></div>
+                <a href="/byp_b2b_subscription/">
+                  <h6 class="fontWeight400">B2B SaaS Subscription
+                  </h6>
+                </a>
+                <h6>Optimize the B2B onboarding and subscription experience</h6>
+
+
+
+
+                <div class="blankHXXS"></div>
                 <a href="/refining_rx_zero/">
                   <h6 class="fontWeight400"> RX Zero</h6>
                 </a>
-                <h6>Transforming Local and Telehealth Services into RX Zero</h6>
+                <h6>Subscription-based generic medication selling</h6>
 
 
                 <div class="blankHXXS"></div>
@@ -1020,7 +1040,7 @@
                 <a href="/admin_panel/">
                   <h6 class="fontWeight400">Admin Panel</h6>
                 </a>
-                <h6>Empowering Brand Managers with Insights</h6>
+                <h6>Empowering CX managers and sales teams</h6>
               </div>
 
 
@@ -1044,8 +1064,23 @@
                   <h6 class="fontWeight400">SEER</h6>
                 </a>
                 <h6>Empowering Brand Managers with Insights</h6>
+                <div class="blankHXS"></div>
+
+
+
+                  <h5> <strong> About </strong> </h5>
+                  <div class="blankHXXS"></div>
+  
+                  <a href="/about">
+                    <h6>About me</h6>
+                  </a>
+                  <a href="mailto:vickyw.design@gmail.com">
+                    <h6>Email me</h6>
+                  </a>
               </div>
-              <div class="Grid-cell">
+
+              <!--
+                            <div class="Grid-cell">
                 <h5> <strong> Service </strong> </h5>
                 <div class="blankHXXS"></div>
 
@@ -1070,18 +1105,10 @@
                 </a>
                 <h6>Crafting Memorable Brand Identities</h6>
               </div>
+              -->
 
-              <div class="Grid-cell">
-                <h5> <strong> About </strong> </h5>
-                <div class="blankHXXS"></div>
 
-                <a href="/about">
-                  <h6>About me</h6>
-                </a>
-                <a href="mailto:vickyw.design@gmail.com">
-                  <h6>Email me</h6>
-                </a>
-              </div>
+
             </div>
 
           </div>
