--- a/html/index.html
+++ b/html/index.html
@@ -206,6 +206,8 @@
       <div class="Grid-cell">
         <div class="element">
           <h1 class="t-hello">👋🏻 hello, I'm Vicky, a UX Designer</h1>
+          <div class="blankHXXS"></div>
+
           <h1 class="specialTextTitle fontWeight700">Passionate about creating</h1>
           <h1 class="specialTextTitle fontWeight700 displayTablet colorLandingText">simple, smooth, engaging</h1>
           <h1 class="specialTextTitle fontWeight700 displayPhone colorLandingText">simple, smooth, engaging</h1>
@@ -218,6 +220,7 @@
     </div>
   </div>
 
+  <div class="blankHXXS"></div>
 
 
   <div class="wrapper">
@@ -494,7 +497,7 @@
 
               <div class="paddingXL borderRadiusL gradient_background2">
                 <a href="/byp_b2b_SaaS/">
-                  <img src="/projectImages/Cover_byp_b2b_booking_new.svg" alt="Business Booking Experience"></a>
+                  <img src="/projectImages/b2b_booking.svg" alt="Business Booking Experience"></a>
               </div>
             </div>
           </div>
