--- a/html/index.html
+++ b/html/index.html
@@ -978,9 +978,9 @@
 
 
     <div class="colorBgYellowVW">
+      <div class="blankHXS"></div>
 
       <div class="wrapper">
-        <div class="blankHS"></div>
 
         <div class="Grid Grid--full Grid--gutters u-textCenter">
           <div class="Grid-cell">
@@ -991,12 +991,14 @@
             </div>
           </div>
         </div>
+        <div class="blankHTiny"></div>
 
         <div class="Grid Grid--gutters Grid--cols-3">
 
           <div class="Grid-cell">
             <div class="element">
               <div class="element">
+                <img class="iconMax" src="icon/landing_collaborate.svg" alt="Collaborate">
                 <h2 data-aos="fade-up"> <strong> Understand</strong> </h2>
                 <h3>Understand business goals and user needs using both qualitative and quantitative data to make informed UX decisions.
                 </h3>
@@ -1008,7 +1010,10 @@
 
           <div class="Grid-cell">
             <div class="element">
+
               <div class="element">
+                <img class="iconMax" src="icon/landing_collaborate.svg" alt="Collaborate">
+
                 <h2 data-aos="fade-up"> <strong> Collaborate </strong> </h2>
                 <h3>Collaborate closely with teams from planning to delivery. Continuous feedback refines and improves designs.
                 </h3>
@@ -1018,6 +1023,7 @@
           <div class="Grid-cell">
             <div class="element">
               <div class="element">
+                <img class="iconMax" src="icon/landing_collaborate.svg" alt="Collaborate">
                 <h2 data-aos="fade-up"> <strong> Facilitate</strong> </h2>
                 <h3>Manage the design process with clear deadlines to stay on track. Document and review each step to create effective, impactful designs.
                 </h3>
@@ -1029,9 +1035,9 @@
 
 
       </div>
-      <div class="blankHXS"></div>
+      <div class="blankHXXS"></div>
       <hr class="wrapper colorBlack">
-      <div class="blankHS"></div>
+      <div class="blankHXS"></div>
 
 
       <div class="carouselLogoBlurContainer">
