--- a/html/index.html
+++ b/html/index.html
@@ -420,7 +420,7 @@
 
 
         <div class="blankHS"></div>
-        <hr class="wrapperL">
+        <hr class="wrapperS">
         <div class="blankHS"></div>
 
         <div class="wrapper">
@@ -477,7 +477,7 @@
 
       </div>
       <div class="blankHS"></div>
-      <hr class="wrapperL">
+      <hr class="wrapperS">
       <div class="blankHS"></div>
 
       <div class="wrapper">
@@ -534,7 +534,7 @@
         </div>
       </div>
       <div class="blankHS"></div>
-      <hr class="wrapperL">
+      <hr class="wrapperS">
       <div class="blankHS"></div>
 
       <div class="wrapper">
@@ -633,7 +633,7 @@
 
       </div>
       <div class="blankHS"></div>
-      <hr class="wrapperL">
+      <hr class="wrapperS">
       <div class="blankHS"></div>
 
       <div class="wrapper">
@@ -993,12 +993,12 @@
         </div>
         <div class="blankHTiny"></div>
 
-        <div class="Grid Grid--gutters Grid--cols-3">
+        <div class="Grid Grid--gutters Grid--cols-3 u-textCenter">
 
           <div class="Grid-cell">
             <div class="element">
               <div class="element">
-                <img class="iconMax" src="icon/landing_collaborate.svg" alt="Collaborate">
+                <img class="iconMax" src="icon/landing_understand.svg" alt="Collaborate">
                 <h2 data-aos="fade-up"> <strong> Understand</strong> </h2>
                 <h3>Understand business goals and user needs using both qualitative and quantitative data to make informed UX decisions.
                 </h3>
@@ -1023,7 +1023,7 @@
           <div class="Grid-cell">
             <div class="element">
               <div class="element">
-                <img class="iconMax" src="icon/landing_collaborate.svg" alt="Collaborate">
+                <img class="iconMax" src="icon/landing_facilitate.svg" alt="Collaborate">
                 <h2 data-aos="fade-up"> <strong> Facilitate</strong> </h2>
                 <h3>Manage the design process with clear deadlines to stay on track. Document and review each step to create effective, impactful designs.
                 </h3>
@@ -1036,7 +1036,7 @@
 
       </div>
       <div class="blankHXXS"></div>
-      <hr class="wrapper colorBlack">
+      <hr class="wrapperL colorBlack">
       <div class="blankHXS"></div>
 
 
