--- a/html/index.html
+++ b/html/index.html
@@ -1036,7 +1036,7 @@
 
       </div>
       <div class="blankHXXS"></div>
-      <hr class="wrapperL colorBlack">
+      <hr class="wrapperS colorBlack">
       <div class="blankHXS"></div>
 
 
