--- a/html/architecture/index.html
+++ b/html/architecture/index.html
@@ -303,21 +303,25 @@
 </div>
 
   <div class="wrapper">
-    <div class="row">
+    <div class="row centerVer">
       <div class="element">
-        <a href="mailto:vickyw.design@gmail.com"> <button class="buttonLanding">Email me
+
+        <a href="mailto:vickyw.design@gmail.com"> <button class="buttonLarge buttonPrimary bgVWGrey">Email me
           </button></a>
+
       </div>
+
+
       <div class="element">
+
         <div class="ClipboardBoxIconOnly">
           <button class="ClipboardIconOnly">
-            <img class="iconM hoverGrey100 paddingM fitContentax borderRadiusMax" title="Copy Email Address to Clipboard" src="/icon/copy.svg">
+            <img class="iconM hoverWhite paddingM fitContentax borderRadiusMax" title="Copy Email Address to Clipboard" src="/icon/copy.svg">
             <p class="clickIconCopy">vickyw.design@gmail.com
             </p>
           </button>
         </div>
       </div>
-
     </div>
   </div>
   <div class="blankHS"></div>
