--- a/html/index.html
+++ b/html/index.html
@@ -86,6 +86,8 @@
 
   <link rel="stylesheet" href="/main.css">
   <script type="text/javascript" src="/scripts.js"></script>
+  <script type="module" src="/scripts.js"></script>
+
 
 
 
@@ -283,7 +285,7 @@
   <div class="wrapper">
     <div class="Grid Grid--gutters Grid--cols-2 Grid--center">
       <div class="element">
-        <a href="/resume"> <button class="buttonLarge buttonPrimary bgVWGrey">My resume
+        <a href="/resume"> <button class="buttonLarge buttonPrimary bgVWGrey">View resume
           </button></a>
      
       </div>
@@ -351,10 +353,10 @@
             <div class="element">
               <h1 class="specialTextM fontWeight700">Business Booking Experience</h1>
 
-              <h3 class="colorLandingText fontWeight700">Business owners managing appointments for their clients </h3>
+              <h4 class="colorLandingText fontWeight700">Business owners managing appointments for their clients </h4>
               <ul>
 
-                <li class="listCircle">Reduced average booking time from 5 minutes to 3.5 minutes, making the process 30% faster.
+                <li class="listCircle">Reduced average booking time from 5 minutes to less than 1 minute, making the process over 80% faster.
                 </li>
                 <li class="listCircle">
                   Decreased errors from 15 to 5 per 100 bookings, resulting in 67% fewer booking errors.
@@ -422,7 +424,7 @@
 
 
         <div class="blankHS"></div>
-        <hr class="wrapperS">
+        <hr class="wrapperM">
         <div class="blankHS"></div>
 
         <div class="wrapper">
@@ -479,7 +481,7 @@
 
       </div>
       <div class="blankHS"></div>
-      <hr class="wrapperS">
+      <hr class="wrapperM">
       <div class="blankHS"></div>
 
       <div class="wrapper">
@@ -536,7 +538,7 @@
         </div>
       </div>
       <div class="blankHS"></div>
-      <hr class="wrapperS">
+      <hr class="wrapperM">
       <div class="blankHS"></div>
 
       <div class="wrapper">
@@ -635,7 +637,7 @@
 
       </div>
       <div class="blankHS"></div>
-      <hr class="wrapperS">
+      <hr class="wrapperM">
       <div class="blankHS"></div>
 
       <div class="wrapper">
@@ -1038,7 +1040,7 @@
 
       </div>
       <div class="blankHXXS"></div>
-      <hr class="wrapperS colorBlack">
+      <hr class="wrapperM colorBlack">
       <div class="blankHXS"></div>
 
 
