--- a/html/photography/index.html
+++ b/html/photography/index.html
@@ -85,6 +85,8 @@
 
   <link rel="stylesheet" href="/main.css">
   <script type="text/javascript" src="/scripts.js"></script>
+  <script type="module" src="/scripts.js"></script>
+
 
 
 
