--- a/html/design_system/index.html
+++ b/html/design_system/index.html
@@ -5,7 +5,6 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
   <!-- Basic Metadata -->
   <link rel="canonical" href="https://vickywang.me/design_system">
 
@@ -1473,7 +1472,7 @@ strong {
               <div class="element">
                 <img class="iconMax" src="./Icon_Mobile.svg" alt="Mobile">
                 <div class="centerHorz">
-                  <div class="chip">Mobile</div>
+                  <div class="chipSmall">Mobile</div>
                 </div>
               </div>
             </div>
@@ -1481,7 +1480,7 @@ strong {
               <div class="element">
                 <img class="iconMax" src="./Icon_Tablet.svg" alt="Tablet">
                 <div class="centerHorz">
-                  <div class="chip">Tablet</div>
+                  <div class="chipSmall">Tablet</div>
                 </div>
 
               </div>
@@ -1490,7 +1489,7 @@ strong {
               <div class="element">
                 <img class="iconMax" src="./Icon_Laptop.svg" alt="Laptop">
                 <div class="centerHorz">
-                  <div class="chip">Laptop</div>
+                  <div class="chipSmall">Laptop</div>
                 </div>
 
               </div>
