--- a/html/index.html
+++ b/html/index.html
@@ -5,7 +5,6 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
   <!-- Basic Metadata -->
   <link rel="canonical" href="https://vickywang.me/">
 
@@ -161,6 +160,8 @@
 <!--Head-->
 
 <body>
+
+
   
 
 
@@ -350,7 +351,16 @@
           </div>
 
           <div class="Grid-cell aside aside-2">
+
             <div class="element">
+                
+
+
+<h6 class="chipSmall colorBgYellowVW colorWhie">
+  Initial Launch
+</h6>
+      <div class="blankHTiny"></div>
+
               <h1 class="specialTextM fontWeight700">Business Booking Experience</h1>
 
               <h4 class="colorLandingText fontWeight700">Business owners managing appointments for their clients </h4>
@@ -442,7 +452,7 @@
             <div class="element">
 
               <div class="paddingXL borderRadiusL gradient_background3">
-                <a href="/byp_b2b_booking">
+                <a href="/byp_b2c_booking">
                   <img src="/projectImages/mobile_b2c_booking.svg" alt="Business Booking Experience"></a>
               </div>
             </div>
@@ -981,7 +991,7 @@
     <div class="blankHS"></div>
 
 
-    <div class="colorBgYellowVW">
+    <div class="colorBgYellowVW_light">
       <div class="blankHXS"></div>
 
       <div class="wrapper">
