--- a/html/index.html
+++ b/html/index.html
@@ -550,7 +550,7 @@
                 </li>
 
                 <li class="listCircle">
-                  Enabling B2B users to complete onboarding independently without requiring hands-on assistance                </li>
+                  Enabling B2B users to complete onboarding independently without requiring hands-on assistance </li>
 
 
 
@@ -573,7 +573,7 @@
         <div class="Grid Grid--full Grid--gutters u-textCenter">
           <div class="Grid-cell">
             <div class="element">
-              <h1 class="specialTextL fontWeight100"> Consumer-Facing Generic Medication Purchase Experience
+              <h1 class="specialTextL fontWeight100"> Consumer-Facing Medication Purchase Experience
 
               </h1>
             </div>
@@ -644,9 +644,9 @@
 
 
 <h6 class="chipSmall colorBgYellowVW colorWhie">
-  1-2 Feature Enhancement
+  Research, Ideation, and Wireframing
 </h6>
-                            <div class="blankHTiny"></div>
+              <div class="blankHTiny"></div>
 
               <h1 class="specialTextM fontWeight700">LASO Local & Telehealth to RX Zero</h1>
 
@@ -713,7 +713,7 @@
 <h6 class="chipSmall colorBgYellowVW colorWhie">
   0-1 Initial Launch
 </h6>
-                            <div class="blankHTiny"></div>
+              <div class="blankHTiny"></div>
 
               <h1 class="specialTextM fontWeight700">Admin Panel</h1>
 
@@ -881,6 +881,7 @@
           <div class="Grid-cell main">
             <div class="element">
 
+
               <div class="paddingXL borderRadiusL gradient_background1">
                 <a href="/design_system/">
                   <img src="/projectImages/vicky_website.svg" alt="Design System"></a>
@@ -891,6 +892,14 @@
 
           <div class="Grid-cell aside aside-2">
             <div class="element">
+                
+
+
+<h6 class="chipSmall colorBgYellowVW colorWhie">
+  Start from Scratch
+</h6>
+              <div class="blankHTiny"></div>
+
               <h1 class="specialTextM fontWeight700">Design System Creation & Optimization</h1>
 
               <h3 class="colorLandingText fontWeight700">Design & Implementation</h3>
@@ -947,8 +956,10 @@
       <div class="Grid Grid--full Grid--gutters u-textCenter">
         <div class="Grid-cell">
           <div class="element">
-            <h1 class="specialTextL"> About Me
-              <h2 class="specialTextS colorLandingText"> I craft simple, user-focused designs that meet business goals. </h2>
+            <h1 class="specialTextL"> About Me</h1>
+            <div class="blankHTiny"></div>
+
+            <h2 class="specialTextS colorLandingText"> I craft simple, user-focused designs that meet business goals. </h2>
           </div>
         </div>
       </div>
