--- a/html/design_system/index.html
+++ b/html/design_system/index.html
@@ -673,6 +673,49 @@
     <div class="blankHXXS"></div>
     
 
+
+          <div class="Grid Grid--gutters Grid--cols-4 u-textCenter">
+            <div class="Grid-cell">
+              <div class="element">
+                <div class="blockS bgTeal800 shadowBox">
+                  <div>teal800</div>
+                  <div>HEX:e6e6e6</div>
+                </div>
+              </div>
+            </div>
+            <div class="Grid-cell">
+              <div class="element">
+                <div class="blockS bgTeal600 shadowBox">
+                  <div>teal600</div>
+                  <div>HEX:292929</div>
+                </div>
+              </div>
+            </div>
+            <div class="Grid-cell">
+              <div class="element">
+                <div class="blockS bgTeal500 shadowBox">
+                  <div>teal500</div>
+                  <div>HEX:757575</div>
+                </div>
+              </div>
+            </div>
+            <div class="Grid-cell">
+              <div class="element">
+                <div class="blockS bgTeal300 shadowBox">
+                  <div>teal300</div>
+                  <div>HEX:757575</div>
+                </div>
+              </div>
+            </div>
+            <div class="Grid-cell">
+              <div class="element">
+                <div class="blockS bgTeal100 shadowBox">
+                  <div>teal100</div>
+                  <div>HEX:fcf5eb</div>
+                </div>
+              </div>
+            </div>
+          </div>
           <div class="Grid Grid--gutters Grid--cols-4 u-textCenter">
             <div class="Grid-cell">
               <div class="element">
