--- a/html/index.html
+++ b/html/index.html
@@ -85,7 +85,7 @@
 
   <link rel="stylesheet" href="/main.css">
   <script type="text/javascript" src="/scripts.js"></script>
-  <script type="module" src="/scripts.js"></script>
+
 
 
 
@@ -177,7 +177,15 @@
 <header>
   <nav class="header colorBgVW" id="header">
     <div class="headerContainer">
-      <a href="/"><img class="logo pointer" src="/icon/LOGO.svg" alt="VW" title="vickywang.me"></a>
+      <a href="/">
+        <div class="logo-container">
+          <!-- LOGO_0.svg -->
+          <img src="/icon/LOGO_0.svg" alt="VW" class="pointer logo logo-0">
+          <!-- LOGO_1.svg -->
+          <img src="/icon/LOGO_1.svg" alt="VW" class="pointer logo logo-1">
+        </div>
+      </a>
+
       <div class="navbar">
         <ol class="nav-menu colorBgVW">
           <li class="nav-item active activeNav box">
